--- a/foodie-fun/src/App.css
+++ b/foodie-fun/src/App.css
@@ -7,7 +7,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 50px;
+  height: 60px;
 }
 
 .logo {
@@ -25,5 +25,55 @@
   text-decoration: none;
   padding-right: 20px;
   font-size: 1.2rem;
+}
 
+.login {
+  width: 95%;
+  margin: 0 5% 0 0;
+  height: 100vh;
+  background: #f6ff00;
+  border-top: 1px solid #00619e;
+  border-right: 1px solid #00619e;
+}
+
+.login h2 {
+  margin-top: 30px;
+  color: #00619e;
+  font-size: 1.8rem;
+}
+
+.input-form {
+display: flex;
+flex-direction: column;
+align-items: center;
+
+}
+
+.input-form input {
+  width: 40%;
+  margin-top: 50px;
+  padding: 10px 10px;
+  background: #00619e;
+  color: white;
+  font-size: 1.2rem;
+  border: none;
+}
+
+.input-form button {
+  padding: 8px 30px;
+  margin-top: 50px;
+  font-size: 1.2rem;
+  background: #3fff0a;
+  color: #00619e;
+  border: none;
+}
+
+.input-form button:hover {
+  background:#00619e;
+  color: #3fff0a;
+}
+
+::placeholder {
+color: white;
+font-size: 1.2rem;
 }
