--- a/foodie-fun/src/App.css
+++ b/foodie-fun/src/App.css
@@ -29,9 +29,13 @@
   font-size: 1.2rem;
 }
 
+.links a:hover {
+  font-size: 1.3rem;
+}
+
 /* Login styles */
 
-.login {
+.form-wrap, .meals-list {
   width: 95%;
   margin: 0 5% 0 0;
   height: 100vh;
@@ -40,7 +44,7 @@
   border-right: 1px solid #00619e;
 }
 
-.login h2 {
+.form-wrap h2 {
   margin-top: 30px;
   color: #00619e;
   font-size: 1.8rem;
@@ -56,7 +60,7 @@ align-items: center;
 
 .input-form input {
   width: 40%;
-  margin-top: 50px;
+  margin-top: 45px;
   padding: 10px 10px;
   background: #00619e;
   color: white;
@@ -81,4 +85,21 @@ align-items: center;
 ::placeholder {
 color: white;
 font-size: 1.2rem;
+}
+
+/* Meals list styles */
+
+.meals-list a {
+  text-decoration: none;
+  font-size: 2rem;
+  color: #00619e;
+}
+
+.meals-list h1 {
+  font-size: 2.3rem;
+  letter-spacing: 0.3rem;
+}
+
+.meals-list a:hover {
+  font-size: 2.2rem;
 }
