--- a/foodie-fun/src/App.css
+++ b/foodie-fun/src/App.css
@@ -104,13 +104,23 @@ font-size: 1.2rem;
   color: #00619e;
 }
 
+.meals-list a:hover {
+  font-size: 2.2rem;
+}
+
 .meals-list h1 {
   font-size: 2.3rem;
   letter-spacing: 0.3rem;
 }
 
-.meals-list a:hover {
-  font-size: 2.2rem;
+.search-form {
+  margin-bottom: 20px;
+}
+
+.search-form .search-input {
+  border: 1px solid #00619e;
+  border-radius: 3px;
+  padding: 2px 5px;
 }
 
 /* Meal styles */
