--- a/foodie-fun/src/App.css
+++ b/foodie-fun/src/App.css
@@ -38,7 +38,7 @@
 .form-wrap, .meals-list {
   width: 95%;
   margin: 0 5% 0 0;
-  height: 100vh;
+  height: 100%;
   background: #f6ff00;
   border-top: 1px solid #00619e;
   border-right: 1px solid #00619e;
@@ -128,6 +128,7 @@ font-size: 1.2rem;
 .meal {
   width: 30%;
   background:whitesmoke;
+  margin-bottom: 30px;
   border-radius: 10px;
   box-shadow: 3px 3px 10px;
 }
