--- a/foodie-fun/src/App.css
+++ b/foodie-fun/src/App.css
@@ -38,7 +38,7 @@
 .form-wrap, .meals-list {
   width: 95%;
   margin: 0 5% 0 0;
-  height: 100%;
+  height: 100vh;
   background: #f6ff00;
   border-top: 1px solid #00619e;
   border-right: 1px solid #00619e;
@@ -131,10 +131,20 @@ font-size: 1.2rem;
   margin-bottom: 30px;
   border-radius: 10px;
   box-shadow: 3px 3px 10px;
+  padding-bottom: 0;
+}
+
+.meal h2 {
+  margin-bottom: 0;
+}
+
+.meal p {
+  margin-bottom: 0;
+  margin-top: 5px;
 }
 
 .meal button {
-  margin: 20px 0;
+  margin: 10px 0;
   background: #3fff0a;
   color: #00619e;
   padding: 4px 8px;
@@ -143,6 +153,7 @@ font-size: 1.2rem;
 }
 
 .meal img {
+  margin-top: 5px;
   width: 80%;
   border-radius: 10px;
   margin-bottom: 10px;
