--- a/foodie-fun/src/App.css
+++ b/foodie-fun/src/App.css
@@ -33,7 +33,7 @@
   font-size: 1.3rem;
 }
 
-/* Login or Logout styles */
+/* Login/Logout/Register styles */
 
 .form-wrap, .meals-list {
   width: 95%;
@@ -60,6 +60,21 @@
   font-size: 1.1rem;
 }
 
+.register {
+  margin-top: 40px;
+  color: #00619e;
+  font-size: 1.6rem;
+}
+
+.register button {
+  background: #3fff0a;
+  color: #00619e;
+  border: none;
+  border-radius: 5px;
+  padding: 8px 30px;
+   font-size: 1.1rem;
+}
+
 /* Form styles */
 
 .input-form {
@@ -76,7 +91,7 @@ align-items: center;
   color: white;
   font-size: 1.2rem;
   border: none;
-  border-radius: 5px
+  border-radius: 5px;
 }
 
 .input-form button {
