--- a/foodie-fun/src/App.css
+++ b/foodie-fun/src/App.css
@@ -1,6 +1,7 @@
 .App {
   text-align: center;
   font-family: 'Roboto Condensed', sans-serif;
+  background: #f6ff00;
 }
 
 /* Header styles */
@@ -10,6 +11,7 @@
   justify-content: space-between;
   align-items: center;
   height: 60px;
+  background: white;
 }
 
 .logo {
@@ -38,7 +40,7 @@
 .form-wrap, .meals-list {
   width: 100%;
   margin: 0 5% 0 0;
-  height: 100vh;
+  height: 100%;
   background: #f6ff00;
   border-top: 1px solid #00619e;
   
@@ -58,6 +60,7 @@
   border: none;
   border-radius: 5px;
   font-size: 1.1rem;
+  margin-bottom: 500px;
 }
 
 .register {
