--- a/foodie-fun/src/App.css
+++ b/foodie-fun/src/App.css
@@ -106,7 +106,11 @@ align-items: center;
   color: #00619e;
   border: none;
   border-radius: 5px;
-  margin-bottom: 500px;
+  
+}
+
+.input-form .signup-btn {
+margin-bottom: 500px;
 }
 
 .input-form button:hover {
